Rename current MainActivity to actual sample name activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
         come to dominate \'prog\' in the 1970s first sought to emulate In the Court of the
         Crimson King, including Genesis, the Alan Parsons Project, and later Rush.
 The line-up of King Crimson has at times changed drastically from album to album.</string>
+    <string name="sample_1">SAMPLE 1</string>
+    <string name="sample_2">SAMPLE 2</string>
 </resources>
