Move band name and tags to resource file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
     <string name="app_name">MotionLayoutSample</string>
 
+    <string name="pink_floyd">Pink Floyd</string>
+    <string name="pink_floyd_tags">Psychedelic/Garage, Progressive Rock, Art Rock, Hard Rock</string>
     <string name="pink_floyd_short_description">Pink Floyd were an English rock band formed
         in London in 1965. Gaining a following as a psychedelic band, they were distinguished
         for their extended compositions, sonic experimentation, philosophical lyrics and elaborate
         live shows, and became a leading band of the progressive rock genre. They are one of the
         most commercially successful and influential groups in popular music history.</string>
-
     <string name="pink_floyd_about">Pink Floyd were founded by students Syd Barrett
         (guitar and lead vocals), Nick Mason (drums), Roger Waters (bass and vocals),
         and Richard Wright (keyboards and vocals). Under Barrett\'s leadership, they released two
@@ -17,6 +18,8 @@
         Wish You Were Here (1975), Animals (1977), The Wall (1979) and The Final Cut (1983).
         The band also composed several film scores.</string>
 
+    <string name="boc">Blue Öyster Cult</string>
+    <string name="boc_tags">Hard Rock, Heavy Metal, Album Rock</string>
     <string name="boc_short_description">Blue Öyster Cult (often abbreviated BÖC or BOC) is
         an American rock band formed on Long Island, New York, in 1967, whose most successful
         work includes the hard rock songs "(Don't Fear) The Reaper," "Godzilla," "Black Blade,"
@@ -32,6 +35,8 @@
         giving their songs cryptic meanings. Additionally, the band would keep a folder
         of Meltzer\'s and Pearlman\'s word associations to insert into their music.</string>
 
+    <string name="camel">Camel</string>
+    <string name="camel_tags">Progressive Rock, Art Rock</string>
     <string name="camel_short_description">The band played is an English progressive rock group from London,
         England, United Kingdom. They formed circa 1964 when brothers Andrew and Ian Latimer got
         together with their respective friends Alan Butcher and Richard Over to form The
@@ -47,6 +52,8 @@
         exciting drummer he knew. Andy Ward joined The Brew at the tender age of 14 and the heart
         of camel had begun to take shape.</string>
 
+    <string name="king_crimson">King Crimson</string>
+    <string name="king_crimson_tags">Progressive Rock, Art Rock, Album Rock</string>
     <string name="king_crimson_short_description">King Crimson are a progressive rock group from
         London, England, United Kingdom formed in 1968 by guitarist Robert Fripp and drummer
         Michael Giles. Though originally an all-British musical group, later members have included
